--- a/loading_kaggle_data_to_colab (1).ipynb
+++ b/loading_kaggle_data_to_colab (1).ipynb
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -112,7 +112,7 @@
         "id": "NGineQt7dErh",
         "outputId": "280fb0e2-9003-4232-ed96-c5ddc1366f3d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "ZTkKggcylXfa"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +169,7 @@
       "metadata": {
         "id": "DD56NrWmlb5V"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "IQq6ZMyTrEfO"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
       "metadata": {
         "id": "7ncAtrq2lg5F"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -244,7 +244,7 @@
         "id": "C0yNdtoRln8A",
         "outputId": "84f8484e-324b-42e3-9163-4fd6dea1424c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
         "id": "dAs9oVnNoziL",
         "outputId": "9bdc5997-2236-47db-ef9d-145bed3506e0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,8 +320,7 @@
         "\n",
         "\n",
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\" # detect the GPU if any, if not use CPU, change cuda to mps if you have a mac\n",
-        "print(\"Device available: \", device)\n",
-        ""
+        "print(\"Device available: \", device)\n"
       ],
       "metadata": {
         "colab": {
@@ -330,7 +329,7 @@
         "id": "wnza6oWyTVMp",
         "outputId": "f0db9bee-d7e0-4181-8cf6-09a3717c5dd7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,15 +345,24 @@
       "source": [
         "data_df = pd.read_csv('icml_face_data.csv')\n",
         "\n",
-        "# Split data according to original splits\n",
-        "train_df = data_df[data_df[' Usage'] == 'Training']\n",
-        "val_df = data_df[data_df[' Usage'] == 'PublicTest']\n",
-        "test_df = data_df[data_df[' Usage'] == 'PrivateTest']"
+        "# # Split data according to original splits\n",
+        "# train_df = data_df[data_df[' Usage'] == 'Training']\n",
+        "# val_df = data_df[data_df[' Usage'] == 'PublicTest']\n",
+        "# test_df = data_df[data_df[' Usage'] == 'PrivateTest']\n",
+        "\n",
+        " if ' Usage' not in data_df.columns:\n",
+        "        print(\"Warning: 'Usage' column not found in dataset\")\n",
+        "        return data_df\n",
+        "\n",
+        "    # Split data and remove 'Usage' column\n",
+        "    train_df = data_df[data_df[' Usage'] == 'Training'].drop(columns=[' Usage'])\n",
+        "    val_df = data_df[data_df[' Usage'] == 'PublicTest'].drop(columns=[' Usage'])\n",
+        "    test_df = data_df[data_df[' Usage'] == 'PrivateTest'].drop(columns=[' Usage'])"
       ],
       "metadata": {
         "id": "EGCd9MjcTVmy"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +389,7 @@
       "metadata": {
         "id": "ZucYei_vTWND"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,7 +433,7 @@
       "metadata": {
         "id": "7cLPEBziLySI"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -444,7 +452,7 @@
       "metadata": {
         "id": "e424zzYIa5GX"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -458,7 +466,7 @@
       "metadata": {
         "id": "xoosyaxCa5EP"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -566,7 +574,7 @@
       "metadata": {
         "id": "8SnDs4uSapGy"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -615,7 +623,7 @@
         "id": "acVOl3Kca4_c",
         "outputId": "268df112-ea94-45ab-faea-20f5cbe445fd"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +694,7 @@
         "id": "0gm-VCSngMWV",
         "outputId": "74e4625d-d2d5-4ede-be0b-5836af9126d6"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -827,7 +835,7 @@
         "id": "YiZHd4NwQ9tE",
         "outputId": "9c7302e8-3b68-4e0b-b831-4b66fcc4d51c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
